@@ -1,3 +1,7 @@
+2009-05-12 Sarka Todorova <sarka.todorova@cern.ch>
+	* release blended material objects from memory (option)
+	* tagged as MuonTrackingGeometry-00-05-06
+
 2009-05-07 Sarka Todorova <sarka.todorova@cern.ch>
 	* MGM/MuonReadoutGeometry dependence
 	* tagged as MuonTrackingGeometry-00-05-05
